# ironslay

./: Cargo.toml  README.md  build.rs
assets/glsl_shaders/: hex_shader.frag
assets/models/: HexagonCap.gltf  SingleHexagon.gltf
hex_shader/: Cargo.toml
hex_shader/src/: lib.rs
src/: components.rs  gameplay_helpers.rs  gameplay_systems.rs  main.rs  math_helpers.rs  orbit_camera.rs  skybox.rs  ui_systems.rs  wrapped_shader_functions.rs
src/gameplay/: components.rs  helpers.rs  mod.rs  systems.rs
src/rendering/: components.rs  helpers.rs  mod.rs  systems.rs
src/ui/: components.rs  mod.rs  setup.rs  systems.rs  types.rs
