[package]
name = "ironslay"
version = "0.1.0"
authors = ["FireFlyForLife <maiko.s.99@gmail.com>", "SimonRenger <simon.renger@gmail.com>"]
edition = "2018"


[dependencies]
bevy = "0.5"
bevy_fly_camera = "0.7.0"
bevy_mod_raycast = "0.2.2"
bevy_skybox = "0.4.0"
bevy-inspector-egui = "0.5"
bytemuck = "1.5.1"

# hex_shader = { path = "./hex_shader" }


# # always build spirv-builder with optimizaitons, so that the resulting shader compiler is nice and fast to run. 
# [profile.dev.build-override]
# opt-level = 3
# [profile.release.build-override]
# opt-level = 3

# [build-dependencies]
# spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", tag = "v0.3.0" }
